# BetterUptime

./: .env  .env.central  .env.worker  .env.worker.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.central.yml  docker-compose.worker.yml  docker-compose.yml
api/: .env  Cargo.toml
api/src/: main.rs  reqeust_inputs.rs  request_output.rs  requests_output.rs
api/src/routes/: authmiddleware.rs  hashing.rs  mod.rs  user.rs  website.rs
betterstack-frontend/: .gitignore  package-lock.json  package.json
betterstack-frontend/src/app/: globals.css  layout.tsx  page.tsx
betterstack-frontend/src/components/: dashboard-sidebar.tsx  footers.tsx  header.tsx  hero.tsx  logo-ticker.tsx  logo.tsx  top-nav.tsx  uptime-features.tsx
betterstack-frontend/src/lib/: auth.ts  use-theme.ts  utils.ts
betterstack-rust/: .dockerignore  .env  .env.droplet  .env.sf  .env.worker  Cargo.toml  Dockerfile  docker-compose.worker.yml  docker-compose.yml
betterstack-rust/api/: .env  Cargo.toml
betterstack-rust/api/src/: alert.rs  main.rs  request_input.rs  request_output.rs
betterstack-rust/api/src/routes/: authmiddleware.rs  hashing.rs  mod.rs  oauth.rs  user.rs  website.rs
betterstack-rust/pusher/: Cargo.toml
betterstack-rust/pusher/src/: main.rs
betterstack-rust/store/: Cargo.toml
betterstack-rust/worker/: .env  Cargo.toml
betterstack-rust/worker/src/: main.rs
pusher/src/: main.rs
store/: Cargo.toml  seed_regions.sql
store/src/: config.rs  lib.rs  redis.rs  schema.rs  store.rs
store/src/models/: mod.rs  (+3 more)
worker/: .env  Cargo.toml
worker/src/: main.rs
(+33 files in other folders)
