[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
store = { path = "../store" }
redis = { version = "1.0.2", features = ["tokio-comp", "streams"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
dotenvy = "0.15"


