[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3.1.12"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
store = { path = "../store" }
jsonwebtoken = "9"
argon2 = "0.5.3"
rand_core = { version = "0.6", features = ["std"] }
lettre = "0.11.19"
dotenv = "0.15"
chrono = { version = "0.4.43", features = ["serde"] }
serde_json = "1.0.149"
